fix framework.jar