@@ -13,6 +13,5 @@ mvn clean package
 echo "✅ Build OK"
 echo "▶️ Lancement de l'application..."
 
-# Lancer Tomcat embarqué
-java -jar target/dependency/webapp-runner.jar target/my-framework-app.war
-
+# Lancer Tomcat embarqué avec l'autorisation d'accès aux modules java.time
+java --add-opens java.base/java.time=ALL-UNNAMED -jar target/dependency/webapp-runner.jar target/my-framework-app.war
